--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,13 @@
 :root {
-    --basic-black: #000000;
+    --black: #000000;
+    --white: #ffffff;
+    --dark-blue: #0B132A;
+    --red: #F53838;
+    --green: #2FAB73;
+    --gray: #4F5665;
+    --light-gray: #DDDDDD;
+    --bg-footer: #F8F8F8;
+    --bg-details: #FFECEC;
 }
 /* rubik-regular - latin_cyrillic */
 @font-face {
@@ -63,7 +71,7 @@ html {
     font-weight: normal;
     font-size: 16px;
     line-height: 30px;
-    color: #4F5665;
+    color: var(--gray);
     height: 100%;
 }
 
@@ -88,7 +96,7 @@ html {
 .logo__name {
     font-size: 20px;
     line-height: 24px;
-    color: #0B132A;
+    color: var(--dark-blue);
 }
 
 .header {
@@ -109,14 +117,19 @@ html {
 
 .main-navigation__link {
     text-decoration: none;
-    color: #4F5665;
+    color: var(--gray);
     font-size: 16px;
     line-height: 19px;
 }
 
 .main-navigation__link:hover,
 .user-navigation__link:hover {
-    opacity: 50%;
+    opacity: 0.7;
+}
+
+.main-navigation__link:active,
+.user-navigation__link:active {
+    opacity: 0.5;
 }
 
 .user-navigation {
@@ -131,7 +144,7 @@ html {
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    color: #0B132A;
+    color: var(--dark-blue);
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
@@ -140,8 +153,8 @@ html {
 
 .user-navigation__link--color {
     width: 150px;
-    color: #F53855;
-    border: 1px solid #F53855;
+    color: var(--red);
+    border: 1px solid var(--red);
     border-radius: 50px;
     height: 45px;
 }
@@ -162,7 +175,7 @@ html {
 
 .commercial__title {
     margin: 0;
-    color: #0B132A;
+    color: var(--dark-blue);
     font-weight: 500;
     font-size: 50px;
     line-height: 70px;
@@ -180,9 +193,9 @@ html {
     width: 250px;
     height: 60px;
     border-radius: 10px;
-    background-color: #F53838;
+    background-color: var(--red);
     box-shadow: 0 20px 50px rgba(245, 56, 56, 0.35);
-    color: white;
+    color: var(--white);
     text-decoration: none;
     font-size: 16px;
     line-height: 25px;
@@ -228,7 +241,7 @@ html {
 
 .details__item:not(:last-child)::before {
     content: "";
-    background-color: #EEEFF2;;
+    background-color: var(--light-gray);
     width: 2px;
     height: 125px;
     position: absolute;
@@ -241,7 +254,7 @@ html {
     align-items: center;
     height: 55px;
     width: 55px;
-    background-color: #FFECEC;
+    background-color: var(--bg-details);
     border-radius: 50%;
     margin-right: 36px;
 }
@@ -286,7 +299,7 @@ html {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #2FAB73;
+    background-color: var(--green);
     left: 0;
     top: 50%;
     transform: translate(0, -50%);
@@ -297,8 +310,8 @@ html {
     position: absolute;
     width: 10px;
     height: 6px;
-    border-left: 2px solid #ffffff;
-    border-bottom: 2px solid #ffffff;
+    border-left: 2px solid var(--white);
+    border-bottom: 2px solid var(--white);
     left: 5px;
     top: 50%;
     transform: translate(0, -50%) rotate(-45deg);
@@ -312,7 +325,7 @@ html {
     font-size: 35px;
     line-height: 50px;
     text-decoration: underline;
-    color: #0B132A;
+    color: var(--dark-blue);
     margin: 0;
 }
 
@@ -338,16 +351,11 @@ html {
     margin-top: 80px;
 }
 
-.offers__description {
-    padding-left: 50px;
-    padding-right: 50px;
-}
-
 .offers__title {
     font-size: 35px;
     line-height: 50px;
     margin: 0;
-    color: #0B132A;
+    color: var(--dark-blue);
     text-align: center;
 }
 
@@ -373,7 +381,7 @@ html {
     align-items: center;
     width: 330px;
     min-height: 760px;
-    border: 2px solid #DDDDDD;
+    border: 2px solid var(--light-gray);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(113, 113, 113, 0.35);
     padding-left: 30px;
@@ -392,7 +400,7 @@ html {
 
 .offer__title {
     margin-top: 30px;
-    color: #0B132A;
+    color: var(--dark-blue);
     font-weight: 500;
     font-size: 18px;
     line-height: 30px;
@@ -416,8 +424,8 @@ html {
     width: 12px;
     height: 6px;
     transform: rotate(-45deg);
-    border-left: 2px solid #2FAB73;
-    border-bottom: 2px solid #2FAB73;
+    border-left: 2px solid var(--green);
+    border-bottom: 2px solid var(--green);
     left: -40px;
     bottom: 15px;
     font-size: 14px;
@@ -443,7 +451,7 @@ html {
     font-weight: 500;
     font-size: 25px;
     line-height: 30px;
-    color: #0B132A;
+    color: var(--dark-blue);
 }
 
 .offer__link {
@@ -458,8 +466,8 @@ html {
 }
 
 .offer__link:hover {
-    background-color: #F53838;
-    color: #ffffff;
+    background-color: var(--red);
+    color: var(--white);
     box-shadow: 0 25px 50px rgba(245, 56, 56, 0.35);
 }
 
@@ -468,8 +476,8 @@ html {
 }
 
 .offer__link--color {
-    color: #F53855;
-    border: 1px solid #F53855;
+    color: var(--red);
+    border: 1px solid var(--red);
     border-radius: 50px;
 }
 
@@ -483,12 +491,14 @@ html {
 .map__title {
     font-size: 35px;
     line-height: 50px;
+    text-align: center;
+    color: var(--dark-blue);
 }
 
 .map__text {
     font-size: 16px;
     line-height: 30px;
-    color: #4F5665;
+    color: var(--gray);
     margin: 0;
     margin-top: 20px;
 }
@@ -520,22 +530,17 @@ html {
     align-items: center;
 }
 
-.reviews__description {
-    padding-left: 50px;
-    padding-right: 50px;
-}
-
 .reviews__title {
     font-size: 35px;
     line-height: 50px;
-    color: #0B132A;
+    color: var(--dark-blue);
     text-align: center;
 }
 
 .reviews__text {
     font-size: 16px;
     line-height: 30px;
-    color: #4F5665;
+    color: var(--gray);
     margin: 0;
     padding: 0;
     margin-top: 20px;
@@ -563,12 +568,12 @@ html {
     width: 360px;
     min-height: 230px;
     padding: 30px;
-    border: 2px solid #DDDDDD;
+    border: 2px solid var(--light-gray);
     border-radius: 10px;
 }
 
 .slider__item:hover {
-    border-color: #F53838;
+    border-color: var(--red);
 }
 
 .slider__author-inner {
@@ -616,14 +621,14 @@ html {
     list-style: none;
     width: 15px;
     height: 15px;
-    background-color: #DDE0E4;
+    background-color: var(--light-gray);
     border-radius: 50%;
 }
 
 .pagination-reviews__item--active {
     width: 45px;
     height: 15px;
-    background-color: #F53838;
+    background-color: var(--red);
     border-radius: 10px;
 }
 
@@ -636,7 +641,7 @@ html {
 .pagination-reviews__button {
     outline: none;
     background-color: transparent;
-    border: 2px solid #F53838;
+    border: 2px solid var(--red);
     position: relative;
     width: 60px;
     height: 60px;
@@ -649,25 +654,24 @@ html {
 }
 
 .pagination-reviews__button:hover {
-    background-color: #F53838;
+    background-color: var(--red);
 }
 
-.pagination-reviews__button::before {
-    content: "";
+.pagination-reviews__button:hover .pagination-reviews__arrow-icon {
+    fill: var(--white);
+}
+
+.pagination-reviews__arrow-icon {
     position: absolute;
-    background-image: url('../img/arrow.svg');
-    background-repeat: no-repeat;
-    width: 20px;
-    height: 18px;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     margin: auto;
+    fill: var(--red);
 }
 
-.pagination-reviews__button--next::before {
-    background-image: url('../img/arrow.svg');
+.pagination-reviews__button--next .pagination-reviews__arrow-icon{
     transform: rotate(180deg);
 }
 
@@ -678,7 +682,7 @@ html {
     border-radius: 10px;
     padding: 58px 70px;
     position: relative;
-    background-color: #ffffff;
+    background-color: var(--white);
     bottom: -90px;
 }
 
@@ -689,7 +693,7 @@ html {
 .subscribe__title {
     font-size: 35px;
     line-height: 45px;
-    color: #0B132A;
+    color: var(--dark-blue);
     margin: 0;
 }
 
@@ -704,9 +708,9 @@ html {
     width: 250px;
     height: 60px;
     border-radius: 10px;
-    background-color: #F53838;
+    background-color: var(--red);
     box-shadow: 0 20px 50px rgba(245, 56, 56, 0.35);
-    color: white;
+    color: var(--white);
     text-decoration: none;
     font-size: 16px;
     line-height: 25px;
@@ -722,7 +726,7 @@ html {
 }
 
 .footer {
-    background-color: #F8F8F8;
+    background-color: var(--bg-footer);
 }
 
 .footer__inner {
@@ -759,7 +763,7 @@ html {
     width: 34px;
     height: 34px;
     border-radius: 50%;
-    background-color: #F53838;
+    background-color: var(--red);
     box-shadow: 0 0 10px rgba(245, 56, 56, 0.35);
 }
 
@@ -769,6 +773,14 @@ html {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
+}
+
+.social__link:hover {
+    opacity: 0.7;
+}
+
+.social__link:active {
+    opacity: 0.5;
 }
 
 .social__link--facebook::before {
@@ -813,14 +825,14 @@ html {
 .earn-money__title {
     font-size: 18px;
     line-height: 30px;
-    color: #0B132A;
+    color: var(--dark-blue);
 }
 
 .product__link,
 .engage__link,
 .earn-money__link {
     text-decoration: none;
-    color: #4F5665;
+    color: var(--gray);
 }
 
 .product__link:hover,
@@ -829,7 +841,13 @@ html {
     opacity: 0.7;
 }
 
+.product__link:active,
+.engage__link:active,
+.earn-money__link:active {
+    opacity: 0.5;
+}
+
 .footer__copyright {
-    color: #AFB5C0;
+    color: var(--light-gray);
     text-decoration: none;
 }
