--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,8 @@ html {
 
 .main-navigation__list {
     display: flex;
+    flex-wrap: wrap;
+    max-width: 700px;
     column-gap: 40px;
     margin: 0;
     padding: 0;
@@ -217,18 +219,17 @@ html {
 
 .details {
     margin-top: 103px;
-    min-height: 200px;
     box-shadow: 0 40px 60px rgba(205, 205, 205, 0.35);
     border-radius: 10px;
 }
 
 .details__list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     list-style: none;
     padding: 0;
     margin: 0;
-    height: 200px;
 }
 
 .details__item {
@@ -237,6 +238,8 @@ html {
     align-items: center;
     position: relative;
     flex-grow: 1;
+    width: 380px;
+    min-height: 200px;
 }
 
 .details__item:not(:last-child)::before {
