--- a/css/main.css
+++ b/css/main.css
@@ -114,11 +114,14 @@ html {
 }
 
 .header {
+    margin-top: 45px;
+}
+
+.header__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     min-height: 45px;
-    margin-top: 45px;
 }
 
 .button {
@@ -205,7 +208,7 @@ html {
     margin-top: 88px;
 }
 
-.commercial {
+.commercial__inner {
     display: flex;
 }
 
@@ -239,6 +242,9 @@ html {
 
 .details {
     margin-top: 103px;
+}
+
+.detail__inner {
     box-shadow: 0 40px 60px rgba(205, 205, 205, 0.35);
     border-radius: 10px;
 }
@@ -315,9 +321,12 @@ html {
 }
 
 .features {
+    margin-top: 95px;
+}
+
+.features__inner {
     display: flex;
     justify-content: space-between;
-    margin-top: 95px;
     column-gap: 169px;
 }
 
@@ -387,10 +396,13 @@ html {
 }
 
 .plans {
+    margin-top: 80px;
+}
+
+.plans__inner {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 80px;
 }
 
 .plans__title {
@@ -404,6 +416,7 @@ html {
 .plans__text {
     margin: 0;
     margin-top: 20px;
+    text-align: center;
 }
 
 .plans__list {
@@ -530,10 +543,13 @@ html {
 }
 
 .map {
+    margin-top: 130px;
+}
+
+.map__inner {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 130px;
 }
 
 .map__title {
@@ -550,6 +566,7 @@ html {
     color: var(--gray);
     margin: 0;
     margin-top: 20px;
+    text-align: center;
 }
 
 .map__image {
@@ -557,9 +574,12 @@ html {
 }
 
 .partners {
+    margin-top: 109px;
+}
+
+.partners__inner {
     display: flex;
     align-items: center;
-    margin-top: 109px;
     min-height: 200px;
 }
 
@@ -574,9 +594,15 @@ html {
 }
 
 .reviews {
+    position: relative;
+    overflow: hidden;
+    margin-top: 50px;
+}
+
+.reviews__inner {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    min-height: 600px;
 }
 
 .reviews__title {
@@ -597,7 +623,7 @@ html {
     text-align: center;
 }
 
-.slider__list   {
+.slider__list {
     display: flex;
     column-gap: 50px;
     padding: 0;
@@ -605,7 +631,8 @@ html {
 }
 
 .reviews__list {
-    margin-top: 60px;
+    position: absolute;
+    top: 200px;
 }
 
 .slider__item {
@@ -615,7 +642,7 @@ html {
     border: 2px solid var(--light-gray);
     border-radius: 10px;
     min-height: 230px;
-    width: 346px;
+    min-width: 400px;
     padding: 30px;
 }
 
@@ -654,7 +681,7 @@ html {
 }
 
 .reviews__pagination {
-    margin-top: 60px;
+    margin-top: auto;
 }
 
 .pagination-reviews {
@@ -729,7 +756,7 @@ html {
     transform: rotate(180deg);
 }
 
-.subscribe {
+.subscribe__inner {
     display: flex;
     align-items: center;
     box-shadow: 0 0 60px rgba(205, 205, 205, 0.35);
