--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,11 @@
     --light-gray: #DDDDDD;
     --bg-footer: #F8F8F8;
     --bg-details: #FFECEC;
+    --shadow-gray: rgba(113, 113, 113, 0.35);
+    --shadow-red: rgba(245, 56, 56, 0.35);
+
 }
+
 /* rubik-regular - latin_cyrillic */
 @font-face {
     font-family: 'Rubik';
@@ -83,14 +87,24 @@ html {
 }
 
 .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 10px;
+    position: relative;
     font-size: 20px;
     line-height: 24px;
     text-decoration: none;
-    color: var(--basic-black);
+    color: var(--black);
+    padding-left: 45px;
+}
+
+.logo::before {
+    content: "";
+    position: absolute;
+    background-image: url('../img/icon-logo.svg');
+    background-repeat: no-repeat;
+    height: 36px;
+    width: 35px;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .logo__name {
@@ -100,11 +114,37 @@ html {
 }
 
 .header {
+    margin-top: 45px;
+}
+
+.header__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     min-height: 45px;
-    margin-top: 45px;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 60px;
+    border-radius: 10px;
+    background-color: var(--red);
+    box-shadow: 0 20px 50px var(--shadow-red);
+    color: var(--white);
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 25px;
+}
+
+.button:hover {
+    opacity: 0.7;
+}
+
+.button:active {
+    opacity: 0.5;
 }
 
 .main-navigation__list {
@@ -134,11 +174,14 @@ html {
     opacity: 0.5;
 }
 
-.user-navigation {
+.user-navigation__list {
     display: flex;
     column-gap: 30px;
     justify-content: center;
     align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .user-navigation__link {
@@ -165,7 +208,7 @@ html {
     margin-top: 88px;
 }
 
-.commercial {
+.commercial__inner {
     display: flex;
 }
 
@@ -189,27 +232,7 @@ html {
 }
 
 .commercial__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 250px;
-    height: 60px;
-    border-radius: 10px;
-    background-color: var(--red);
-    box-shadow: 0 20px 50px rgba(245, 56, 56, 0.35);
-    color: var(--white);
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 25px;
     margin-top: auto;
-}
-
-.commercial__link:hover {
-    opacity: 0.7;
-}
-
-.commercial__link:active {
-    opacity: 0.5;
 }
 
 .commercial__image {
@@ -219,6 +242,9 @@ html {
 
 .details {
     margin-top: 103px;
+}
+
+.detail__inner {
     box-shadow: 0 40px 60px rgba(205, 205, 205, 0.35);
     border-radius: 10px;
 }
@@ -251,10 +277,8 @@ html {
     right: 0;
 }
 
-.details__image-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.details__icon {
+    position: relative;
     height: 55px;
     width: 55px;
     background-color: var(--bg-details);
@@ -262,9 +286,31 @@ html {
     margin-right: 36px;
 }
 
-.details__image {
-    width: 16px;
+.details__icon::before {
+    content: "";
+    position: absolute;
+    background-repeat: no-repeat;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.details__icon--users::before {
+    background-image: url('../img/user-icon.svg');
     height: 18px;
+    width: 16px;
+}
+
+.details__icon--locations::before {
+    background-image: url('../img/marker-icon.svg');
+    height: 21px;
+    width: 14px;
+}
+
+.details__icon--servers::before {
+    background-image: url('../img/server-icon.svg');
+    height: 25px;
+    width: 25px;
 }
 
 .details__features {
@@ -275,9 +321,12 @@ html {
 }
 
 .features {
+    margin-top: 95px;
+}
+
+.features__inner {
     display: flex;
     justify-content: space-between;
-    margin-top: 95px;
     column-gap: 169px;
 }
 
@@ -317,7 +366,7 @@ html {
     border-bottom: 2px solid var(--white);
     left: 5px;
     top: 50%;
-    transform: translate(0, -50%) rotate(-45deg);
+    transform: translate(0, -70%) rotate(-45deg);
 }
 
 .features__content {
@@ -346,15 +395,17 @@ html {
     margin-top: 30px;
 }
 
-.offers {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 980px;
+.plans {
     margin-top: 80px;
 }
 
-.offers__title {
+.plans__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.plans__title {
     font-size: 35px;
     line-height: 50px;
     margin: 0;
@@ -362,12 +413,16 @@ html {
     text-align: center;
 }
 
-.offers__text {
+.plans__text {
     margin: 0;
     margin-top: 20px;
+    text-align: center;
 }
 
-.offers__list {
+.plans__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
     margin-top: 60px;
 }
 
@@ -386,19 +441,22 @@ html {
     min-height: 760px;
     border: 2px solid var(--light-gray);
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(113, 113, 113, 0.35);
+    box-shadow: 0 0 10px var(--shadow-gray);
     padding-left: 30px;
     padding-right: 30px;
 }
 
-.offer__card:hover {
-    box-shadow: 0 0 20px rgba(113, 113, 113, 0.35);
+.offer__card::before {
+    content: "";
+    background-image: url('../img/cart.svg');
+    background-repeat: no-repeat;
+    height: 165px;
+    width: 144px;
+    margin-top: 79px;
 }
 
-.offer__image {
-    width: 144px;
-    height: 165px;
-    margin-top: 79px;
+.offer__card:hover {
+    box-shadow: 0 0 20px var(--shadow-gray);
 }
 
 .offer__title {
@@ -458,7 +516,7 @@ html {
 }
 
 .offer__link {
-    display: flex;  /* выровнять по центру, line-height === height (line-height: 45px;) */
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -471,27 +529,31 @@ html {
 .offer__link:hover {
     background-color: var(--red);
     color: var(--white);
-    box-shadow: 0 25px 50px rgba(245, 56, 56, 0.35);
+    box-shadow: 0 25px 50px var(--shadow-red);
 }
 
 .offer__link:active {
     opacity: 0.6;
 }
 
-.offer__link--color {
+.offer__link--accent {
     color: var(--red);
     border: 1px solid var(--red);
     border-radius: 50px;
 }
 
 .map {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-top: 130px;
 }
 
+.map__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .map__title {
+    margin: 0;
     font-size: 35px;
     line-height: 50px;
     text-align: center;
@@ -504,6 +566,7 @@ html {
     color: var(--gray);
     margin: 0;
     margin-top: 20px;
+    text-align: center;
 }
 
 .map__image {
@@ -511,9 +574,12 @@ html {
 }
 
 .partners {
+    margin-top: 109px;
+}
+
+.partners__inner {
     display: flex;
     align-items: center;
-    margin-top: 109px;
     min-height: 200px;
 }
 
@@ -528,12 +594,19 @@ html {
 }
 
 .reviews {
+    position: relative;
+    overflow: hidden;
+    margin-top: 50px;
+}
+
+.reviews__inner {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    min-height: 600px;
 }
 
 .reviews__title {
+    margin: 0;
     font-size: 35px;
     line-height: 50px;
     color: var(--dark-blue);
@@ -550,29 +623,31 @@ html {
     text-align: center;
 }
 
-
-.slider__list{
+.slider__list {
     display: flex;
     column-gap: 50px;
     padding: 0;
     margin: 0;
-    width: 100%;
 }
 
 .reviews__list {
-    margin-top: 60px;
+    position: absolute;
+    top: 200px;
 }
-
 
 .slider__item {
     list-style: none;
     margin: 0;
     padding: 0;
-    width: 360px;
-    min-height: 230px;
-    padding: 30px;
     border: 2px solid var(--light-gray);
     border-radius: 10px;
+    min-height: 230px;
+    min-width: 400px;
+    padding: 30px;
+}
+
+.slider__wrapper {
+    margin: 0;
 }
 
 .slider__item:hover {
@@ -590,6 +665,9 @@ html {
 
 .slider__author-name {
     display: block;
+    font-weight: 500;
+    font-size: 18px;
+    color: #0B132A;
 }
 
 .slider__author-rating {
@@ -603,7 +681,7 @@ html {
 }
 
 .reviews__pagination {
-    margin-top: 60px;
+    margin-top: auto;
 }
 
 .pagination-reviews {
@@ -678,7 +756,7 @@ html {
     transform: rotate(180deg);
 }
 
-.subscribe {
+.subscribe__inner {
     display: flex;
     align-items: center;
     box-shadow: 0 0 60px rgba(205, 205, 205, 0.35);
@@ -690,7 +768,7 @@ html {
 }
 
 .subscribe__description {
-    width: 364px;
+    width: 372px;
 }
 
 .subscribe__title {
@@ -705,27 +783,7 @@ html {
 }
 
 .subscribe__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 250px;
-    height: 60px;
-    border-radius: 10px;
-    background-color: var(--red);
-    box-shadow: 0 20px 50px rgba(245, 56, 56, 0.35);
-    color: var(--white);
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 25px;
     margin-left: auto;
-}
-
-.subscribe__link:hover {
-    opacity: 0.7;
-}
-
-.subscribe__link:active {
-    opacity: 0.5;
 }
 
 .footer {
@@ -767,7 +825,7 @@ html {
     height: 34px;
     border-radius: 50%;
     background-color: var(--red);
-    box-shadow: 0 0 10px rgba(245, 56, 56, 0.35);
+    box-shadow: 0 0 10px var(--shadow-red);
 }
 
 .social__link::before {
@@ -815,38 +873,28 @@ html {
     margin-left: 125px;
 }
 
-.product__list,
-.engage__list,
-.earn-money__list {
+.footer-navigation__list {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.product__title,
-.engage__title,
-.earn-money__title {
+.footer-navigation__title {
     font-size: 18px;
     line-height: 30px;
     color: var(--dark-blue);
 }
 
-.product__link,
-.engage__link,
-.earn-money__link {
+.footer-navigation__link {
     text-decoration: none;
     color: var(--gray);
 }
 
-.product__link:hover,
-.engage__link:hover,
-.earn-money__link:hover {
+.footer-navigation__link:hover {
     opacity: 0.7;
 }
 
-.product__link:active,
-.engage__link:active,
-.earn-money__link:active {
+.footer-navigation:active {
     opacity: 0.5;
 }
 
